hphp/test/zend/good/Zend/tests/variadic/no_default_error.php.expectf

Fatal error: A variadic parameter ('...') must not have a default value. in %s/no_default_error.php on line 3
